<resources>
    <string name="app_name">GeoRenting</string>

    <string name="message_signing_in">Connecting to Google+…</string>

    <string name="error_network">Network error.</string>
    <string name="error_network_action_retry">Retry</string>

    <string name="n_money_units" translatable="false">%1.2f GC</string>
    <string name="n_meters" translatable="false">%d m</string>
    <string name="n_rent_multiplier" translatable="false">%1.2f</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="main_drawer_my_geofences">My GeoFences</string>
    <string name="my_geofences_no_geofences">You do not own any GeoFence yet. Add one by clicking the button down right!</string>
    <string name="geofence_item_action_tear_down">Tear Down</string>
    <string name="main_drawer_settings">Settings</string>
    <string name="main_drawer_support">Support</string>
    <string name="main_drawer_map">Map</string>
    <string name="main_drawer_profile">Cash</string>
    <string name="main_drawer_history">History</string>
    <string name="main_drawer_invite">Invite Friends</string>

    <string name="activity_own_fence_visited">&lt;b&gt;2$s&lt;/b&gt; visited your GeoFence &lt;b&gt;%1$s&lt;/b&gt; and paid &lt;b&gt;%3$.2f&lt;/b&gt; GC in rent.</string>
    <string name="activity_foreign_fence_visited">You visited &lt;b&gt;%2$s&lt;/b&gt;s GeoFence &lt;b&gt;%1$s&lt;/b&gt; and paid &lt;b&gt;%3$.2f&lt;/b&gt; GC in rent.</string>
    <string name="activity_fence_expired">Your Fence &lt;b&gt;%1$s&lt;/b&gt; has expired.</string>

    <string name="fragment_cash_seven_days_title">Seven Days</string>
    <string name="fragment_cash_all_time_title">All Time</string>
    <string name="fragment_cash_earnings_rent">Earnings Rent</string>
    <string name="fragment_cash_expenses_rent">Expenses Rent</string>
    <string name="fragment_cash_expenses_geo_fence">Expenses GeoFences</string>


    <string name="title_activity_geofence_detail">GeoFence</string>
    <string name="geofence_detail_geofence_dead">Dead.</string>
    <string name="geofence_detail_time_to_live">Time to Live</string>
    <string name="geofence_detail_rent_multiplier">Rent Multiplier</string>
    <string name="geofence_detail_radius">Radius</string>
    <string name="geofence_detail_total_visitors">Total Visitors</string>
    <string name="geofence_detail_total_earnings">Total Earnings</string>
    <string name="geofence_detail_cost">Initial Cost</string>
    <string name="geofence_detail_location">Location</string>
    <string name="geofence_detail_owner">Owner</string>
    <string name="dialog_teardown_action_teardown">Tear Down</string>
    <string name="dialog_teardown_action_cancel">Cancel</string>
    <string name="dialog_teardown_message">Tear down GeoFence?</string>

    <string name="title_activity_settings">Settings</string>
    <string name="pref_account_title">Account</string>
    <string name="pref_account_logout">Log Out</string>
    <string name="pref_notify_title">Notifications</string>
    <string name="pref_notify_visit">Visit Notification</string>
    <string name="pref_notify_visited">Visited Notification</string>
    <string name="pref_notify_visited_desc">Show Notification if someone visits your GeoFence.</string>
    <string name="pref_notify_visit_desc">Show Notification if you visit a GeoFence.</string>
    <string name="pref_notify_expired">Expired Notification</string>
    <string name="pref_notify_expired_desc">Show Notification if one of your GeoFences expires.</string>
    <string name="pref_key_account_logout" translatable="false">account_logout</string>
    <string name="pref_key_notify_visit" translatable="false">notifyVisits</string>
    <string name="pref_key_notify_visited" translatable="false">notifyVisited</string>
    <string name="pref_key_notify_expired" translatable="false">notifyExpired</string>

    <string name="permission_location_rationale">We need access to your devices Location to deliver the core functionality of the Game.</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>

    <string name="title_activity_geofence_create">Create GeoFence</string>
    <string name="create_geofence_cost_estimate" translatable="false">&lt;b&gt;%1$.2f GC&lt;/b&gt; </string>
    <string name="create_geofence_name_title">Name</string>
    <string name="create_geofence_radius_title">Radius</string>
    <string name="create_geofence_rent_title">Rent Multiplier</string>
    <string name="create_geofence_ttl_title">Lifespan</string>
    <string name="create_geofence_ttl_hours">%1$.2fh</string>
    <string name="create_geofence_error_overlap">You can not create a GeoFence at this place.</string>
    <string name="create_geofence_action_buy">Buy GeoFence</string>
    <string name="create_geofence_error_name_empty">Name is required.</string>
    <string name="error_create_fence_overlap">You can not create this GeoFence because it overlaps with other GeoFences.</string>
    <string name="error_create_fence_cant_afford">You can not afford this GeoFence!</string>


    <string name="app_invite_title">Send Invitations to GeoRenting.</string>
    <string name="app_invite_message">Try out GeoRenting now!</string>
    <string name="app_invite_cta">Build GeoFences</string>


    <string name="content_description_geofence_map">Map of the GeoFence.</string>
    <string name="content_description_empty" translatable="false" />


    <string name="action_search">Search</string>

    <string name="onboarding_1_title">This is GeoRenting,</string>
    <string name="onboarding_1_description">a game based on your location, played with other players in your local area.</string>
    <string name="onboarding_2_title">Buy GeoFences!</string>
    <string name="onboarding_2_description">You can buy GeoFences for GeoCoins.</string>
    <string name="onboarding_3_title">Earn GeoCoins!</string>
    <string name="onboarding_3_description">If someone enters your GeoFence, you will receive GeoCoins from them.</string>
    <string name="onboarding_4_title">Pay Rent…</string>
    <string name="onboarding_4_description">On the other side, if you visit someones GeoFence, GeoCoins will be taken from your account.</string>
    <string name="onboarding_5_title">Let it go!</string>
    <string name="onboarding_5_description">The game is running in the background, so you will earn GeoCoins even when the app is not active.</string>
    <string name="onboarding_finish">Finish</string>

    <string name="yes">Yes</string>
    <string name="create_geofence_place_title">Address</string>


</resources>
