<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_notify_title"
        android:key="pref_key_notify_settings">
        <CheckBoxPreference
            android:key="@string/pref_key_notify_visit"
            android:title="@string/pref_notify_visit"
            android:summary="@string/pref_notify_visit_desc"
            android:defaultValue="true"
            />
        <CheckBoxPreference
            android:key="@string/pref_key_notify_visited"
            android:title="@string/pref_notify_visited"
            android:summary="@string/pref_notify_visited_desc"
            android:defaultValue="true"
            />
        <CheckBoxPreference
            android:key="@string/pref_key_notify_expired"
            android:title="@string/pref_notify_expired"
            android:summary="@string/pref_notify_expired_desc"
            android:defaultValue="true"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_account_title"
        android:key="pref_key_account_settings">
        <Preference android:title="@string/pref_account_logout"
            android:key="@string/pref_key_account_logout" />

    </PreferenceCategory>

</PreferenceScreen>