<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_geofences"
            android:checked="true"
            android:icon="@drawable/ic_plusone_medium_off_client"
            android:title="@string/main_drawer_my_geofences"/>
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/ic_plusone_medium_off_client"
            android:title="@string/hello_world"/>
    </group>

    <group android:id="@+id/nav_footer"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/main_drawer_settings" />

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/main_drawer_support" />
    </group>
</menu>