<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="costEstimate"
            type="de.alternadev.georenting.data.api.model.CostEstimate" />
        <variable
            name="overlap"
            type="boolean" />
        <variable
            name="loading"
            type="boolean" />
        <import type="android.text.Html" />
        <import type="android.view.View" />

    </data>
    <android.support.design.widget.CoordinatorLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/primary_color"
                android:transitionName="toolbar"
                app:title="@string/title_activity_geofence_create"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_scrollFlags="scroll|enterAlways" />
        </android.support.design.widget.AppBarLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.gms.maps.MapView
                android:layout_below="@+id/appbar"
                android:id="@+id/geofence_map"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:visibility="@{(overlap || loading) ? View.GONE : View.VISIBLE}">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/nameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/nameText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/create_geofence_name_title"/>

                    </android.support.design.widget.TextInputLayout>
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="12dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@{costEstimate.canAfford ? @color/green : @color/red}"
                        android:text="@{Html.fromHtml(@string/create_geofence_cost_estimate(costEstimate.cost))}"/>
                    
                    <Button
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:id="@+id/createButton"
                        android:enabled="@{costEstimate.canAfford}"
                        android:layout_gravity="end"
                        android:layout_marginTop="12dp"
                        android:text="@string/create_geofence_action_buy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="@{overlap &amp;&amp; !loading ? View.VISIBLE : View.GONE}">
                    <TextView
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/create_geofence_error_overlap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textAlignment="center" />
                </LinearLayout>
                <ProgressBar
                    android:indeterminate="true"
                    android:layout_gravity="center"
                    android:visibility="@{loading ? View.VISIBLE : View.GONE}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.CardView>
        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>
</layout>